Move common 'extensions' to the new project: Library

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,7 @@ LeetCode/LeetCode/obj/*
 LeetCode/LeetCode/bin/*
 LeetCode/LeetCodeTests/obj/*
 LeetCode/LeetCodeTests/bin/*
+LeetCode/Library/obj/*
+LeetCode/Library/bin/*
 LeetCode/.vs/*
+LeetCode/packages/*
