Move 'extensions' from 'LeetCode' project to the 'Library' one as 'MathExtensions'

--- a/LeetCode/LeetCodeTests/LeetCodeTests.csproj
+++ b/LeetCode/LeetCodeTests/LeetCodeTests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LeetCode\LeetCode.csproj" />
+    <ProjectReference Include="..\Library\Library.csproj" />
   </ItemGroup>
 
 </Project>
